--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
   @import url(https://fonts.googleapis.com/css?family=Montserrat);
   @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
+    
+   body, html{
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    }
   h1 {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 4em;
-    color: #333;
-    -webkit-text-shadow: 0 2px 1px rgba(0, 0, 0, 0.6), 0 0 2px rgba(0, 0, 0, 0.7);
-    -moz-text-shadow: 0 2px 1px rgba(0, 0, 0, 0.6), 0 0 2px rgba(0, 0, 0, 0.7);
-    text-shadow: 0 2px 1px rgba(0, 0, 0, 0.6), 0 0 2px rgba(0, 0, 0, 0.7);
     word-spacing: 16px;
+    font-weight: bolder;
   }
 
   p {
     font-family: 'Open Sans', sans-serif;
-    font-size: 1.4em;
-    font-weight: bold;
-    color: #222;
-    text-shadow: 0 0 40px #FFFFFF, 0 0 30px #FFFFFF, 0 0 20px #FFFFFF;
   }
 
   .container {
@@ -30,7 +29,7 @@
     top: 0;
     bottom: 0;
     width: 100%;
-    background: url('');
+    background: url("img/pexels-photo-301484.jpeg");
     background-size: cover;
   }
 
@@ -52,6 +51,10 @@
     margin: 0 auto;
     text-align: center;
     padding: 8px;
+    mix-blend-mode: overlay;
+    color: #000000;
+    font-size: 20px;
+    font-weight: bolder;
   }
 
   @media only screen and (min-width: 800px) {
